// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AlertMessage Custom Style 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#CCCCCC",
            "fontFamily": "Avenir-Book",
            "fontSize": 17,
            "fontWeight": "bold",
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      ALERT ALERT
    </Text>
  </View>
</View>
`;

exports[`Storyshots AlertMessage Default 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#CCCCCC",
            "fontFamily": "Avenir-Book",
            "fontSize": 17,
            "fontWeight": "bold",
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      ALERT ALERT
    </Text>
  </View>
</View>
`;

exports[`Storyshots AlertMessage Hidden 1`] = `null`;

exports[`Storyshots CommentInput Custom Height 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#cdcdcd",
          "flexDirection": "row",
          "height": 60,
          "marginBottom": 0,
          "paddingTop": 5,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      multiline={true}
      placeholder="Type something.."
      placeholderTextColor="#1F1F1F50"
      style={
        Array [
          Object {
            "backgroundColor": "#cdcdcd",
            "flex": 4,
            "fontSize": 15,
            "marginBottom": 0,
            "marginLeft": 15,
            "marginRight": 10,
            "marginTop": 5,
            "paddingBottom": 6,
            "paddingVertical": 10,
          },
        ]
      }
      underlineColorAndroid="transparent"
    />
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 6,
            "marginRight": 15,
          }
        }
      >
        <Image
          resizeMode="contain"
          source={1114}
          style={
            Object {
              "height": 50,
              "width": 40,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots CommentInput Default 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#cdcdcd",
          "flexDirection": "row",
          "height": 60,
          "marginBottom": 0,
          "paddingTop": 5,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      multiline={true}
      placeholder="Type something.."
      placeholderTextColor="#1F1F1F50"
      style={
        Array [
          Object {
            "backgroundColor": "#cdcdcd",
            "flex": 4,
            "fontSize": 15,
            "marginBottom": 0,
            "marginLeft": 15,
            "marginRight": 10,
            "marginTop": 5,
            "paddingBottom": 6,
            "paddingVertical": 10,
          },
        ]
      }
      underlineColorAndroid="transparent"
    />
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 6,
            "marginRight": 15,
          }
        }
      >
        <Image
          resizeMode="contain"
          source={1114}
          style={
            Object {
              "height": 50,
              "width": 40,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots DrawerButton Default 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
    }
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontFamily": "Avenir-Book",
          "fontSize": 20,
          "marginVertical": 10,
        }
      }
    >
      Drawer Button
    </Text>
  </View>
</View>
`;

exports[`Storyshots FullButton Custom Style 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "blue",
      "borderBottomColor": "#fb5f26",
      "borderBottomWidth": 1,
      "borderTopColor": "#e73536",
      "borderTopWidth": 1,
      "marginVertical": 5,
      "opacity": 1,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "white",
        "fontFamily": "HelveticaNeue-Bold",
        "fontSize": 14,
        "margin": 18,
        "textAlign": "center",
      }
    }
  >
    STYLE ME UP!
  </Text>
</View>
`;

exports[`Storyshots FullButton Default 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(164, 0, 48, 0.5)",
      "borderBottomColor": "#fb5f26",
      "borderBottomWidth": 1,
      "borderTopColor": "#e73536",
      "borderTopWidth": 1,
      "marginVertical": 5,
      "opacity": 1,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "white",
        "fontFamily": "HelveticaNeue-Bold",
        "fontSize": 14,
        "margin": 18,
        "textAlign": "center",
      }
    }
  >
    A SIMPLE BUTTON
  </Text>
</View>
`;

exports[`Storyshots RoundedButton Default 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#e73536",
      "borderRadius": 5,
      "height": 45,
      "justifyContent": "center",
      "marginHorizontal": 25,
      "marginVertical": 10,
      "opacity": 1,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "white",
        "fontSize": 14,
        "fontWeight": "bold",
        "marginVertical": 10,
        "textAlign": "center",
      }
    }
  >
    A SIMPLE ROUNDED BUTTON
  </Text>
</View>
`;

exports[`Storyshots RoundedButton Text as children 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#e73536",
      "borderRadius": 5,
      "height": 45,
      "justifyContent": "center",
      "marginHorizontal": 25,
      "marginVertical": 10,
      "opacity": 1,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "white",
        "fontSize": 14,
        "fontWeight": "bold",
        "marginVertical": 10,
        "textAlign": "center",
      }
    }
  >
    HELLO FROM THE CHILDREN!
  </Text>
</View>
`;
